# cousin-eddie

./: .env.example  .gitignore  IDEA-CARD.md  QUICKSTART.md  README.md  RUN.md  STATUS.md  app.js  docker-compose.yml  pyproject.toml  run_dashboard.sh
.claude/: current_state.md
.claude/insights/: _index.json
.claude/signals/: inbox.md
.claude/state/: next.md  readiness.json  session.json
.idea-factory/: idea-context.json
api/: main.py
data/backtest_results/: DASH_20260214_112508.json  LYFT_20260214_112504.json  META_20260214_112513.json  UBER_20260214_104929.json  UBER_20260214_112500.json
docs/: CHATGPT_RESEARCH_MAPPING.md  EDGAR_ARCHITECTURE.md  EDGAR_DATA_AUDIT.md  FREE_API_SETUP.md  SESSION_LOG.md  SIGNAL_INVENTORY.md  SIGNAL_SYNTHESIS.md  SIGNAL_UPDATES.md
frontend/: README.md  app.js  index.html  style.css
output/theses/: UBER_20260207_201539.txt
scripts/: analyze_correlations.py  analyze_signals.py  analyze_uber_html.py  backfill_signals.py  check_market_data.py  generate_thesis.py  ingest_market_data.py  ingest_signals.py  init_db.py  init_db.sql  query_signals.py  run_backtest.py  scrape_uber_playwright.py  test_form4.py  test_jobs_uber.py  test_uber_job_signal.py  test_uber_jobs.py  update_signals.py
src/: __init__.py  database.py
src/backtesting/: engine.py
src/core/: __init__.py  company.py  orchestrator.py  registry.py  signal.py  signal_processor.py
src/market_data/: __init__.py  options_data.py  stock_prices.py
src/models/: __init__.py  base.py  company.py  market_data.py  signal.py
src/signal_types/: __init__.py
(+52 files in other folders)
