[project]
name = "cousin-eddie"
version = "0.1.0"
description = "Alternative Data Intelligence Platform for Quantitative Trading"
authors = [{name = "Paul Jump"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "python-dateutil>=2.8.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tenacity>=8.2.3",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pytrends>=4.9.2",
    "google-play-scraper>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
